hphp/test/zend/good/ext/mbstring/tests/bug46806.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("mbstring")) die("skip mbstring is not available");
}
